--- a/res/values/calyx_strings.xml
+++ b/res/values/calyx_strings.xml
@@ -78,4 +78,9 @@
 
     <string name="cleartext_network_policy_title">Restrict cleartext network traffic</string>
     <string name="cleartext_network_policy_summary">Blocks all non-TLS network traffic. Requires Private DNS configuration. Note: Without explicit exemptions, Tor and most VPNs won\'t work</string>
+
+    <!-- Button text for adding a managed profile [CHAR LIMIT=25] -->
+    <string name="user_add_managed_profile_item_title">Managed profile</string>
+    <!-- Summary for add managed profile entry in the choice dialog [CHAR LIMIT=none] -->
+    <string name="user_add_managed_profile_item_summary">Managed profiles share the launcher, notifications, and recent tasks with the user</string>
 </resources>
