Add setting to allow/disallow interacting with quick settings on secure lockscreen (2/2)
Add a Quick Settings toggle in secure screen lock settings

Issue: calyxos#394
Change-Id: I7dbb11173aa2010d8aa35761881d9bf6c8130967

--- a/res/values/calyx_strings.xml
+++ b/res/values/calyx_strings.xml
@@ -83,4 +83,8 @@
     <string name="user_add_managed_profile_item_title">Work profile</string>
     <!-- Summary for add managed profile entry in the choice dialog [CHAR LIMIT=none] -->
     <string name="user_add_managed_profile_item_summary">Work profiles share the launcher, notifications, and recent tasks with the user</string>
+
+    <!-- Access QS on lockscreen -->
+    <string name="show_qs_on_secure_keyguard_title">Quick settings</string>
+    <string name="show_qs_on_secure_keyguard_summary">Allow toggling quick settings on secure lockscreen</string>
 </resources>
