--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -22,6 +22,12 @@
     android:title="@string/status_bar_title">
 
     <PreferenceScreen
+        android:fragment="com.android.settings.statusbar.NetworkTrafficSettings"
+        android:key="network_traffic_settings"
+        android:title="@string/network_traffic_settings_title"
+        android:summary="@string/network_traffic_settings_summary" />
+
+    <PreferenceScreen
         android:key="status_bar_icons"
         android:title="@string/status_bar_system_icons_title"
         android:summary="@string/status_bar_system_icons_summary">
