Activate backup service for unmanaged profiles
Change-Id: I56e95d76e42fbb7e6aa254692a8ee54ab7552a94

--- a/res/xml/user_details_settings.xml
+++ b/res/xml/user_details_settings.xml
@@ -29,6 +29,10 @@
             android:key="app_and_content_access"
             android:icon="@drawable/ic_lock_closed"
             android:title="@string/user_restrictions_title" />
+    <Preference
+            android:key="restore_user"
+            android:icon="@drawable/ic_settings_backup"
+            android:title="@string/user_restore" />
     <com.android.settingslib.RestrictedPreference
             android:key="remove_user"
             android:icon="@drawable/ic_delete"
