Add toggle to enable backup service for work profiles
Change-Id: I6f9719c94a507b05a1261c82b8d9fe78678d6534

--- a/res/values/calyx_strings.xml
+++ b/res/values/calyx_strings.xml
@@ -87,4 +87,6 @@
     <!-- Access QS on lockscreen -->
     <string name="show_qs_on_secure_keyguard_title">Quick settings</string>
     <string name="show_qs_on_secure_keyguard_summary">Allow toggling quick settings on secure lockscreen</string>
+
+    <string name="user_enable_backup">Enable backup service</string>
 </resources>
