Add status bar settings page
* Partially based on LineageOS LineageParts status bar settings

Change-Id: I4871e608e37133dd7a2fab41d24a58d596483d80

--- a/res/xml/system_dashboard_fragment.xml
+++ b/res/xml/system_dashboard_fragment.xml
@@ -30,6 +30,14 @@
         settings:controller="com.android.settings.language.LanguageAndInputPreferenceController"/>
 
     <Preference
+        android:key="status_bar_settings"
+        android:title="@string/status_bar_title"
+        android:icon="@drawable/ic_settings_statusbar"
+        android:order="-255"
+        android:fragment="com.android.settings.statusbar.StatusBarSettings"
+        settings:controller="com.android.settings.statusbar.StatusBarSettingPreferenceController"/>
+
+    <Preference
         android:key="gesture_settings"
         android:title="@string/gesture_preference_title"
         android:icon="@drawable/ic_settings_gestures"
