Manually import translations from weblate
* Weblate repo is conflicing so do this to avoid
  losing any translations

Picked from:
* https://gitlab.com/CalyxOS/weblate/platform_packages_apps_settings/-/commit/08fe25a6a0b4beff086ad871296d37a8c009c95d
* https://gitlab.com/CalyxOS/weblate/platform_packages_apps_settings/-/commit/549fa07286831f9f73e5d039b133f6664140ff06
* https://gitlab.com/CalyxOS/weblate/platform_packages_apps_settings/-/commit/16c64c9b521dcbee3d795db352fb55dd8868527a
* https://gitlab.com/CalyxOS/weblate/platform_packages_apps_settings/-/commit/bb929a0178a712289823f877169d50d8b8a22179
* https://gitlab.com/CalyxOS/weblate/platform_packages_apps_settings/-/commit/1309080f8c14e1ade1f82bc40952dcb4f728c0ce

Translated using Weblate (French)

Currently translated at 100.0% (48 of 48 strings)

Translation: CalyxOS/Settings
Translate-URL: https://hosted.weblate.org/projects/calyxos/platform_packages_apps_settings/fr/
Change-Id: Ie960b9f060632278dee78a57052a692432b0813c

Translated using Weblate (Chinese (Simplified))

Currently translated at 100.0% (48 of 48 strings)

Translation: CalyxOS/Settings
Translate-URL: https://hosted.weblate.org/projects/calyxos/platform_packages_apps_settings/zh_Hans/
Change-Id: Icf03faf383d01073dd8984461dddc57ee30da711

Translated using Weblate (Japanese)

Currently translated at 70.8% (34 of 48 strings)

Translation: CalyxOS/Settings
Translate-URL: https://hosted.weblate.org/projects/calyxos/platform_packages_apps_settings/ja/
Change-Id: I11540570db668b9f9aea7d318b04824d83d12fa3

Translated using Weblate (Japanese)

Currently translated at 70.8% (34 of 48 strings)

Translation: CalyxOS/Settings
Translate-URL: https://hosted.weblate.org/projects/calyxos/platform_packages_apps_settings/ja/
Change-Id: I173ee88588b829e535360150d5c0e7d2cab712f2

Translated using Weblate (Portuguese (Brazil))

Currently translated at 97.9% (47 of 48 strings)

Translation: CalyxOS/Settings
Translate-URL: https://hosted.weblate.org/projects/calyxos/platf

--- a/res/values-fr/calyx_strings.xml
+++ b/res/values-fr/calyx_strings.xml
@@ -3,10 +3,10 @@
     <string name="panic_settings_summary">Afficher l’option du bouton d’alimentation qui active un bouton d’urgence.</string>
     <string name="panic_settings_title">Afficher l’option Urgence</string>
     <string name="calyxos_version">Version de CalyxOS</string>
-    <string name="deny_new_usb_disabled">Toujours autoriser les nouveaux gadgets USB</string>
-    <string name="deny_new_usb_dynamic">Autoriser les nouveaux gadgets USB quand ils sont déverrouillés</string>
-    <string name="deny_new_usb_enabled">Refuser les nouveaux gadgets USB</string>
-    <string name="deny_new_usb_summary">Prise en charge des gadgets USB tels que les écouteurs, les dispositifs de stockage et les entrées (souris, claviers, joysticks)</string>
+    <string name="deny_new_usb_disabled">Toujours autoriser les nouveaux périphériques USB</string>
+    <string name="deny_new_usb_dynamic">Autoriser les nouveaux périphériques USB quand ils sont déverrouillés</string>
+    <string name="deny_new_usb_enabled">Refuser les nouveaux périphériques USB</string>
+    <string name="deny_new_usb_summary">Prise en charge des périphériques USB tels que les écouteurs, les dispositifs de stockage et les entrées (souris, claviers, joysticks)</string>
     <string name="deny_new_usb_title">Restreindre USB</string>
     <string name="bluetooth_timeout_summary_8hours">8 heures</string>
     <string name="bluetooth_timeout_summary_4hours">4 heures</string>
@@ -21,7 +21,7 @@
     <string name="bluetooth_timeout_summary_15secs">15 secondes</string>
     <string name="bluetooth_timeout_summary_never">Jamais</string>
     <string name="bluetooth_timeout_summary2">Ne pas désactiver automatiquement le Bluetooth</string>
-    <string name="bluetooth_timeout_summary">Le Bluetooth s\'éteindra après &lt;xliff:g xmlns:xliff=\"urn:oasis:names:tc:xliff:document:1.2\" id=\"timeout_description\"&gt;%1$s&lt;/xliff:g&gt; si aucun n\'appareil n\'est connecté</string>
+    <string name="bluetooth_timeout_summary">Le Bluetooth s\'éteindra après <xliff:g id="timeout_description">%1$s</xliff:g> si aucun appareil n\'est connecté</string>
     <string name="bluetooth_timeout">Délai d\'attente Bluetooth</string>
     <string name="vendor_security_patch">Niveau de patch sécurité fournisseur</string>
     <string name="cleartext_network_policy_summary">Bloque tout le trafic réseau non TLS. Nécessite de configurer un DNS privé. Remarque : sans exemptions explicites, Tor et la plupart des VPN ne fonctionneront pas</string>
