Fix weblate translations
* Fix xliff

Translated using Weblate (German)

Currently translated at 100.0% (48 of 48 strings)

Translation: CalyxOS/Settings
Translate-URL: https://hosted.weblate.org/projects/calyxos/platform_packages_apps_settings/de/
Change-Id: I1f20c7597582b64d4103a2334611068f7b96cc4f

Translated using Weblate (Czech)

Currently translated at 52.0% (25 of 48 strings)

Translation: CalyxOS/Settings
Translate-URL: https://hosted.weblate.org/projects/calyxos/platform_packages_apps_settings/cs/
Change-Id: I4feb1bf1ba2027c51761a3ed697eef9b6fb9b0fe

Translated using Weblate (Norwegian Bokmål)

Currently translated at 50.0% (24 of 48 strings)

Translation: CalyxOS/Settings
Translate-URL: https://hosted.weblate.org/projects/calyxos/platform_packages_apps_settings/nb_NO/
Change-Id: I47bd46a1c2b096587fc8412b941fe91d8a371878

Translated using Weblate (Russian)

Currently translated at 52.0% (25 of 48 strings)

Translation: CalyxOS/Settings
Translate-URL: https://hosted.weblate.org/projects/calyxos/platform_packages_apps_settings/ru/
Change-Id: I3b6ac64b22b0b2f631c4c123020b9182bd71b55a

Translated using Weblate (Icelandic)

Currently translated at 52.0% (25 of 48 strings)

Translation: CalyxOS/Settings
Translate-URL: https://hosted.weblate.org/projects/calyxos/platform_packages_apps_settings/is/
Change-Id: Idb6e2c32096707a3de2ab33d11ff60917bfc7d1e

Translated using Weblate (Chinese (Simplified))

Currently translated at 100.0% (48 of 48 strings)

Translation: CalyxOS/Settings
Translate-URL: https://hosted.weblate.org/projects/calyxos/platform_packages_apps_settings/zh_Hans/
Change-Id: Ic0c6cc4a2bd4803b89896aecfb63de21e1648efc

Translated using Weblate (Spanish)

Currently translated at 52.0% (25 of 48 strings)

Translation: CalyxOS/Settings
Translate-URL: https://hosted.weblate.org/projects/calyxos/platform_packages_apps_settings/es/
Change-Id: If2edb8da5e8183106d2288d4b558ce889dec1931

Translated using Weblate (Finnish)

Currently translated at 52.0% (25 of 48 

--- a/res/values-de/calyx_strings.xml
+++ b/res/values-de/calyx_strings.xml
@@ -10,7 +10,7 @@
     <string name="deny_new_usb_title">USB einschränken</string>
     <string name="calyxos_version">CalyxOS Version</string>
     <string name="bluetooth_timeout_summary2">Bluetooth nicht automatisch ausschalten</string>
-    <string name="bluetooth_timeout_summary">Bluetooth schaltet sich nach &lt;xliff:g xmlns:xliff=\"urn:oasis:names:tc:xliff:document:1.2\" id=\"timeout_description\"&gt;%1$s&lt;/xliff:g&gt; aus, wenn keine Geräte verbunden sind</string>
+    <string name="bluetooth_timeout_summary">Bluetooth schaltet sich nach <xliff:g id="timeout_description">%1$s</xliff:g> aus, wenn keine Geräte verbunden sind</string>
     <string name="bluetooth_timeout">Bluetooth-Zeitabschaltung</string>
     <string name="bluetooth_timeout_summary_8hours">8 Stunden</string>
     <string name="bluetooth_timeout_summary_4hours">4 Stunden</string>
