--- a/res/values-es/calyx_strings.xml
+++ b/res/values-es/calyx_strings.xml
@@ -23,5 +23,5 @@
     <string name="bluetooth_timeout_summary_15secs">15 segundos</string>
     <string name="bluetooth_timeout_summary_never">Nunca</string>
     <string name="bluetooth_timeout_summary2">No apagar automáticamente el Bluetooth</string>
-    <string name="bluetooth_timeout_summary">Bluetooth se apagará después de &lt;xliff:g xmlns:xliff=\"urn:oasis:names:tc:xliff:document:1.2\" id=\"timeout_description\"&gt; %1$s &lt;/xliff:g&gt; si no hay dispositivos conectados</string>
+    <string name="bluetooth_timeout_summary">Bluetooth se apagará después de <xliff:g id="timeout_description">%1$s</xliff:g> si no hay dispositivos conectados</string>
 </resources>
