--- a/res/values-cs/calyx_strings.xml
+++ b/res/values-cs/calyx_strings.xml
@@ -13,7 +13,7 @@
     <string name="bluetooth_timeout_summary_15secs">15 sekund</string>
     <string name="bluetooth_timeout_summary_never">Nikdy</string>
     <string name="bluetooth_timeout_summary2">Nevypínat Bluetooth automaticky</string>
-    <string name="bluetooth_timeout_summary">Bluetooth se vypne po &lt;xliff:g xmlns:xliff=\"urn:oasis:names:tc:xliff:document:1.2\" id=\"timeout_description\"&gt;%1$s&lt;/xliff:g&gt; pokud nejsou připojená žádná zařízení</string>
+    <string name="bluetooth_timeout_summary">Bluetooth se vypne po <xliff:g id="timeout_description">%1$s</xliff:g> pokud nejsou připojená žádná zařízení</string>
     <string name="bluetooth_timeout">Maximální travní Bluetooth spojení</string>
     <string name="vendor_security_patch">Úroveň bezpečností záplaty výrobce</string>
     <string name="deny_new_usb_disabled">Vždy povolit nová USB zařízení</string>
