--- a/res/values/calyx_strings.xml
+++ b/res/values/calyx_strings.xml
@@ -82,4 +82,8 @@
     <!-- Access QS on lockscreen -->
     <string name="show_qs_on_secure_keyguard_title">Quick settings</string>
     <string name="show_qs_on_secure_keyguard_summary">Allow toggling quick settings on secure lockscreen</string>
+
+    <!-- App data usage Datura Firewall link -->
+    <string name="data_usage_app_datura_firewall">Datura Firewall</string>
+    <string name="data_usage_app_datura_firewall_summary">Network Access, Background data, and Wi-Fi, Mobile data and VPN settings have been moved to Datura Firewall. Tap to open.</string>
 </resources>
