--- a/res/xml/app_data_usage.xml
+++ b/res/xml/app_data_usage.xml
@@ -55,6 +55,15 @@
             android:key="app_settings"
             android:title="@string/data_usage_app_settings" />
 
+        <PreferenceScreen
+            android:key="datura_firewall"
+            android:title="@string/data_usage_app_datura_firewall"
+            android:summary="@string/data_usage_app_datura_firewall_summary">
+            <intent android:action="android.intent.action.MAIN"
+                    android:targetPackage="org.calyxos.datura"
+                    android:targetClass="org.calyxos.datura.MainActivity" />
+        </PreferenceScreen>
+
         <com.android.settingslib.RestrictedSwitchPreference
             android:key="restrict_background"
             android:title="@string/data_usage_app_restrict_background"
