--- a/res/values/calyx_strings.xml
+++ b/res/values/calyx_strings.xml
@@ -35,7 +35,7 @@
 
     <!-- Access QS on lockscreen -->
     <string name="show_qs_on_secure_keyguard_title">Quick settings</string>
-    <string name="show_qs_on_secure_keyguard_summary">Allow toggling quick settings on secure lockscreen</string>
+    <string name="show_qs_on_secure_keyguard_summary">Show quick settings on secure lockscreen</string>
 
     <!-- Timeout entries -->
     <string name="timeout_summary_never">Never</string>
