--- a/res/xml/security_advanced_settings.xml
+++ b/res/xml/security_advanced_settings.xml
@@ -20,6 +20,14 @@
     xmlns:settings="http://schemas.android.com/apk/res-auto"
     android:title="@string/security_advanced_settings">
 
+    <ListPreference
+        android:key="device_reboot_timeout"
+        android:entries="@array/device_reboot_timeout_entries"
+        android:entryValues="@array/device_reboot_timeout_values"
+        android:summary="@string/device_reboot_timeout_summary"
+        android:title="@string/device_reboot_timeout_title"
+        settings:controller="com.android.settings.security.DeviceRebootTimeoutPreferenceController" />
+
     <PreferenceCategory
         android:order="1"
         android:key="dashboard_tile_placeholder" />
