--- a/res/xml/security_advanced_settings.xml
+++ b/res/xml/security_advanced_settings.xml
@@ -36,6 +36,12 @@
         android:title="@string/security_restrict_usb_title"
         settings:controller="com.android.settings.security.RestrictUsbPreferenceController" />
 
+    <SwitchPreference
+        android:key="security_setting_panic_enabled"
+        android:title="@string/panic_settings_title"
+        android:summary="@string/panic_settings_summary"
+        settings:controller="com.android.settings.security.PanicButtonPreferenceController" />
+
     <PreferenceCategory
         android:order="1"
         android:key="dashboard_tile_placeholder" />
